Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

    Ported from 1.5 branch

      - Anchors around divs break in explorer, so they were put inside in 
        the xslt renderer.

Silva 1.6b4

    Bugs fixed:

      - New version of SilvaMetadata (0.12) released which fixes a bug
        where storing of empty metadata fields/deleting metadata values was
        impossible.

Silva 1.6b3 (first public beta)

    Features added

      - Assets now have a version_status method that always returns 'public'
        which means they can be found by SilvaFind.

      - Old version cleanup code was made more robust and can now be
        used to delete all old versions older than a certain date, 
        instead of just all old versions. 

      - Silva now uses ZCML for registration of Silva extensions and
        the content types they define. See doc/extension.txt for more
        information. See also doc/developer_changes.txt.

      - The Version/CatalogedVersion base class does not expect a
        title argument anymore. This title argument had been unused
        for a long time. This requires minor adjustments in some subclasses
        of Version and CatalogedVersion. For more information see
        doc/developer_changes.txt.

      - Much i18n polishing.

      - Made image titles required, since they provide the alt attribute.

      - Added adapters so we now have a simple API to index, unindex
        and reindex content objects, folders and assets. Adapt to
        Products.Silva.adapters.ICatalogIndexable.

      - Moved document info in the document status screen to an info column 
        like assets have.

      - Refactored/cleaned up tab_status_macros to remove code duplication.

      - Changed the add screens for Files and Images so the upload (file) field
        comes first, followed by a subhead 'optional fields', because Authors
        were not seeing the tip that they don't have to fill in an id.
    